# codepet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  pet_asset_issue.yml
.github/workflows/: build.yml  release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: agent_tools.rs  basic_memory.rs  command_monitor.rs  diagnostics.rs  lib.rs  main.rs  pet_assets.rs
apps/desktop/src/app/: App.tsx  AppProvider.tsx  AppRoutes.tsx  AppShell.tsx  navigation.ts  styles.css
apps/desktop/src/characters/: ActivePetRenderer.tsx  CharactersPage.tsx  PetAnimationPreview.tsx  PetAssetLibraryPage.tsx  PetImportPanel.tsx  SpritePetRenderer.tsx  defaultCharacter.ts  petAssetService.ts  petAssetStorage.ts  rolePresets.ts  (+4 more)
docs/: architecture.md  character-system.md  codex-cursor-claude-code-setup.md  demo.md  github-desktop-workflow.md  install.md  known-issues.md  memory-system.md  ollama-setup.md  privacy.md  qa-checklist.md  quick-start.md  release.md  roadmap.md  roundtable-workflow.md  skill-system.md
docs/assets/screenshots/: README.md
examples/characters/: default-pet.json
examples/personas/: friendly-companion.json
examples/skills/: pomodoro-coach.json
(+92 files in other folders)
